Fixed recent item layout issue

--- a/sass/sell_media.scss
+++ b/sass/sell_media.scss
@@ -1360,6 +1360,10 @@ input.sell-media-search-text[type=text] {
 	}
 }
 
+.sell-media-recent-widget{
+	overflow: hidden;
+}
+
 /*= Themes
 -------------------------------------------------------------- */
 .sell-media {
